--- a/roles/kolla_hosts/templates/vm-template.xml.j2
+++ b/roles/kolla_hosts/templates/vm-template.xml.j2
@@ -49,21 +49,21 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x06' function='0x0'/>
     </controller>
     <interface type='bridge'>
-      <source bridge='{{ host_os_nat_bridge }}'/>
+      <source bridge='{{ host_interfaces | selectattr('role', 'equalto', 'nat') | map(attribute='bridge') | join }}'/>
       <target dev='vnet0'/>
       <model type='rtl8139'/>
       <alias name='net0'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x03' function='0x0'/>
     </interface>
     <interface type='bridge'>
-      <source bridge='{{ host_os_host_bridge }}'/>
+      <source bridge='{{ host_interfaces | selectattr('role', 'equalto', 'host') | map(attribute='bridge') | join }}'/>
       <target dev='vnet1'/>
       <model type='rtl8139'/>
       <alias name='net1'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </interface>
     <interface type='bridge'>
-      <source bridge='{{ host_os_ext_bridge }}'/>
+      <source bridge='{{ host_interfaces | selectattr('role', 'equalto', 'ext') | map(attribute='bridge') | join }}'/>
       <target dev='vnet2'/>
       <model type='rtl8139'/>
       <alias name='net1'/>
