--- a/roles/kolla_build/templates/quagga-Dockerfile.j2
+++ b/roles/kolla_build/templates/quagga-Dockerfile.j2
@@ -6,10 +6,6 @@ LABEL maintainer="{{ maintainer }}" name="{{ image_name }}" build-date="{{ build
 {% import "macros.j2" as macros with context %}
 
 {% if base_distro in ['centos', 'oraclelinux', 'rhel'] %}
-    {% set base_centos_yum_repo_packages = [
-        'epel-release'
-    ] %}
-
     {% set opnfv_quagga_packages = [
         'autoconf',
         'automake',
@@ -38,16 +34,14 @@ LABEL maintainer="{{ maintainer }}" name="{{ image_name }}" build-date="{{ build
     ] %}
 {% endif %}
 
-{{ macros.install_packages(base_centos_yum_repo_packages | customizable("centos_yum_repo_packages")) }}
-
 {{ macros.install_packages(opnfv_quagga_packages | customizable("packages")) }}
 
-{{ macros.install_pip(opnfv_quagga_pip_packages | customizable("pip_packages")) }}
+RUN {{ macros.install_pip(opnfv_quagga_pip_packages | customizable("pip_packages"),constraints = false) }}
 
 RUN git clone https://github.com/opensourcerouting/opnfv-quagga-packaging.git && \
-    cd opnfv-quagga && \
+    cd opnfv-quagga-packaging && \
     make && \
-    cd rpm_packages && \
+    cd rpm_package && \
     yum localinstall * || :
 
 {% block opnfv_quagga_footer %}{% endblock %}
