--- a/roles/kolla_deploy/templates/multinode.j2
+++ b/roles/kolla_deploy/templates/multinode.j2
@@ -10,6 +10,9 @@ controller-1 ansible_user=centos ansible_become=True
 [opendaylight]
 controller-1 ansible_user=centos ansible_become=True
 
+[quagga]
+controller-1 ansible_user=centos ansible_become=True
+
 # The network nodes are where your l3-agent and loadbalancers will run
 # This can be the same as a host in the control group
 [network]
