--- a/roles/kolla_deploy/files/quagga-templates-quagga.json.j2
+++ b/roles/kolla_deploy/files/quagga-templates-quagga.json.j2
@@ -1,5 +1,5 @@
 {
-    "command": "quagga --config-file /etc/quagga/quagga.conf",
+    "command": "/usr/lib/quagga/qthrift/opnfv-quagga.sh",
     "config_files": [
         {
             "source": "{{ container_config_directory }}/quagga.conf",
