--- a/roles/kolla_build/templates/quagga-Dockerfile.j2
+++ b/roles/kolla_build/templates/quagga-Dockerfile.j2
@@ -21,7 +21,7 @@ RUN git clone https://github.com/6WIND/zrpcd.git /zrpcd && \
     sed -i 's/bison\*/bison-devel/' pkgsrc/dev_compile_script.sh && \
     sed -i 's/boost\*/boost-devel boost-static/' pkgsrc/dev_compile_script.sh && \
     chmod a+x pkgsrc/dev_compile_script.sh && \
-    pkgsrc/dev_compile_script.sh -d -b -t && \
+    pkgsrc/dev_compile_script.sh -d -b -t -v 2 && \
     rm -rf /zrpcd
 
 {% block thrift_quagga_footer %}{% endblock %}
