--- a/roles/kolla_hosts/templates/host.xml.j2
+++ b/roles/kolla_hosts/templates/host.xml.j2
@@ -11,6 +11,7 @@ or other application using the libvirt API.
 
 <network>
   <name>{{ item.name }}</name>
+  <forward mode='nat'/>
   <bridge name='{{ item.bridge }}' stp='off' delay='0'/>
   <mac address='52:54:00:2c:fa:63'/>
   <domain name='{{ item.role }}'/>
